<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeActivity">

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="101dp"
        android:layout_height="37dp"
        android:layout_marginTop="70dp"
        android:text="@string/title_welcome"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/textViewUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <TextView
        android:id="@+id/textViewUserName"
        android:layout_width="179dp"
        android:layout_height="105dp"
        android:layout_marginBottom="48dp"
        android:gravity="center"
        android:text="@string/title_user_name"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/textViewAuthMsg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewAuthMsg"
        android:layout_width="276dp"
        android:layout_height="32dp"
        android:layout_marginBottom="48dp"
        android:text="@string/title_auth_message"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/textViewErrDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewErrDetail"
        android:layout_width="176dp"
        android:layout_height="110dp"
        android:layout_marginBottom="108dp"
        android:text="@string/title_auth_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>