<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AuthenticateActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/buttonOTP1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="3dp"
            android:background="#2196F3"
            android:text="@string/button_otp"
            android:textAlignment="center"
            android:textColor="@color/cardview_light_background" />

        <Button
            android:id="@+id/buttonFace"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="3dp"
            android:gravity="center"
            android:background="#2196F3"
            android:text="@string/button_face"
            android:textColor="@color/cardview_light_background" />

        <Button
            android:id="@+id/buttonIris"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_marginBottom="3dp"
            android:background="#2196F3"
            android:text="@string/button_iris"
            android:textColor="@color/cardview_light_background" />

        <Button
            android:id="@+id/buttonFinger"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="3dp"
            android:background="#2196F3"
            android:text="@string/button_finger"
            android:textColor="@color/cardview_light_background" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_auth_input"
            android:layout_width="match_parent"
            android:layout_height="319dp">

            <ImageView
                android:id="@+id/imageViewFace"
                android:layout_width="206dp"
                android:layout_height="186dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/face_scan_logo"
                android:src="@drawable/lti_transparent"
                app:layout_constraintBottom_toTopOf="@+id/textViewOTP1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewAuthInput"
                android:layout_width="387dp"
                android:layout_height="25dp"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@+id/imageViewFace"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.742" />

            <EditText
                android:id="@+id/textViewOTP1"
                android:layout_width="98dp"
                android:layout_height="45dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:inputType="numberPassword"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonAuthenticate1"
                android:layout_width="129dp"
                android:layout_height="44dp"
                android:background="#3F51B5"
                android:gravity="center"
                android:text="@string/btn_auth"
                android:textColor="@color/cardview_light_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>